Welcome CentOS User

--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 This repository is for testing purposes only.
 Also, this contains a code to read data from MySQL databases and store it in a SQLite database.
+Welcome CentOS User :)
+
