CentOS User changed thier name

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 This repository is for testing purposes only.
 Also, this contains a code to read data from MySQL databases and store it in a SQLite database.
 Welcome CentOS User :)
+CentOS User changed their name :P`
 
